[gd_scene load_steps=78 format=2]

[ext_resource path="res://Map/snow-expansion.png" type="Texture" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://Scripts/TowerSpawn.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=4]
[ext_resource path="res://Scripts/UnitsSpawn.gd" type="Script" id=5]
[ext_resource path="res://TowerMenu.gd" type="Script" id=6]
[ext_resource path="res://Scripts/TurnQueue.gd" type="Script" id=7]
[ext_resource path="res://Map/gold.png" type="Texture" id=8]
[ext_resource path="res://themes/labeltheme.tres" type="Theme" id=9]
[ext_resource path="res://Map/hp.png" type="Texture" id=10]
[ext_resource path="res://Map/blue_troop_castle.png" type="Texture" id=11]
[ext_resource path="res://Map/red_troop_castle.png" type="Texture" id=12]

[sub_resource type="NavigationPolygon" id=122]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=66]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=67]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=68]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=69]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=70]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=71]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=72]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=73]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=74]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=75]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=76]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=77]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=78]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=79]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=80]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=81]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=82]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=83]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=84]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=85]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=86]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=87]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=88]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=89]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=90]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=91]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=92]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=93]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=94]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=95]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=96]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=97]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=98]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=99]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=100]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=101]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=102]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=103]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=104]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=105]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=106]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=107]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=108]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=109]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=110]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=111]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=112]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=113]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=114]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=115]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=116]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=117]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=118]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=119]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="NavigationPolygon" id=120]
vertices = PoolVector2Array( 0, 0, 16, 0, 16, 16, 0, 16 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]

[sub_resource type="TileSet" id=1]
0/name = "snow-expansion.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 128, 112 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 446, Vector2( 0, 2 ), 219, Vector2( 0, 3 ), 59, Vector2( 0, 4 ), 146, Vector2( 0, 5 ), 176, Vector2( 1, 0 ), 255, Vector2( 1, 1 ), 443, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 58, Vector2( 1, 4 ), 56, Vector2( 1, 5 ), 152, Vector2( 2, 0 ), 447, Vector2( 2, 1 ), 506, Vector2( 2, 2 ), 438, Vector2( 2, 3 ), 182, Vector2( 2, 4 ), 27, Vector2( 2, 5 ), 24, Vector2( 3, 0 ), 507, Vector2( 3, 1 ), 187, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 434, Vector2( 3, 4 ), 54, Vector2( 3, 5 ), 18, Vector2( 4, 0 ), 510, Vector2( 4, 1 ), 190, Vector2( 4, 2 ), 155, Vector2( 4, 3 ), 178, Vector2( 4, 4 ), 432, Vector2( 4, 5 ), 48, Vector2( 5, 0 ), 191, Vector2( 5, 1 ), 442, Vector2( 5, 2 ), 218, Vector2( 5, 3 ), 440, Vector2( 5, 4 ), 216, Vector2( 5, 5 ), 144, Vector2( 6, 0 ), 254, Vector2( 6, 1 ), 250, Vector2( 6, 2 ), 154, Vector2( 6, 3 ), 248, Vector2( 6, 4 ), 26, Vector2( 6, 5 ), 16, Vector2( 7, 0 ), 251, Vector2( 7, 1 ), 186, Vector2( 7, 2 ), 62, Vector2( 7, 3 ), 184, Vector2( 7, 4 ), 50, Vector2( 7, 5 ), 448 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [ Vector2( 0, 0 ), SubResource( 122 ), Vector2( 0, 1 ), SubResource( 66 ), Vector2( 0, 2 ), SubResource( 67 ), Vector2( 0, 3 ), SubResource( 68 ), Vector2( 0, 4 ), SubResource( 69 ), Vector2( 0, 5 ), SubResource( 70 ), Vector2( 0, 6 ), SubResource( 71 ), Vector2( 1, 0 ), SubResource( 72 ), Vector2( 1, 1 ), SubResource( 73 ), Vector2( 1, 2 ), SubResource( 74 ), Vector2( 1, 3 ), SubResource( 75 ), Vector2( 1, 4 ), SubResource( 76 ), Vector2( 1, 5 ), SubResource( 77 ), Vector2( 1, 6 ), SubResource( 78 ), Vector2( 2, 0 ), SubResource( 79 ), Vector2( 2, 1 ), SubResource( 80 ), Vector2( 2, 2 ), SubResource( 81 ), Vector2( 2, 3 ), SubResource( 82 ), Vector2( 2, 4 ), SubResource( 83 ), Vector2( 2, 5 ), SubResource( 84 ), Vector2( 2, 6 ), SubResource( 85 ), Vector2( 3, 0 ), SubResource( 86 ), Vector2( 3, 1 ), SubResource( 87 ), Vector2( 3, 2 ), SubResource( 88 ), Vector2( 3, 3 ), SubResource( 89 ), Vector2( 3, 4 ), SubResource( 90 ), Vector2( 3, 5 ), SubResource( 91 ), Vector2( 3, 6 ), SubResource( 92 ), Vector2( 4, 0 ), SubResource( 93 ), Vector2( 4, 1 ), SubResource( 94 ), Vector2( 4, 2 ), SubResource( 95 ), Vector2( 4, 3 ), SubResource( 96 ), Vector2( 4, 4 ), SubResource( 97 ), Vector2( 4, 5 ), SubResource( 98 ), Vector2( 4, 6 ), SubResource( 99 ), Vector2( 5, 0 ), SubResource( 100 ), Vector2( 5, 1 ), SubResource( 101 ), Vector2( 5, 2 ), SubResource( 102 ), Vector2( 5, 3 ), SubResource( 103 ), Vector2( 5, 4 ), SubResource( 104 ), Vector2( 5, 5 ), SubResource( 105 ), Vector2( 5, 6 ), SubResource( 106 ), Vector2( 6, 0 ), SubResource( 107 ), Vector2( 6, 1 ), SubResource( 108 ), Vector2( 6, 2 ), SubResource( 109 ), Vector2( 6, 3 ), SubResource( 110 ), Vector2( 6, 4 ), SubResource( 111 ), Vector2( 6, 5 ), SubResource( 112 ), Vector2( 6, 6 ), SubResource( 113 ), Vector2( 7, 0 ), SubResource( 114 ), Vector2( 7, 1 ), SubResource( 115 ), Vector2( 7, 2 ), SubResource( 116 ), Vector2( 7, 3 ), SubResource( 117 ), Vector2( 7, 4 ), SubResource( 118 ), Vector2( 7, 5 ), SubResource( 119 ), Vector2( 7, 6 ), SubResource( 120 ) ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=6]
0/name = "snow-expansion.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 128, 128, 128, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 446, Vector2( 0, 2 ), 219, Vector2( 0, 3 ), 59, Vector2( 0, 4 ), 146, Vector2( 0, 5 ), 176, Vector2( 1, 0 ), 255, Vector2( 1, 1 ), 443, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 58, Vector2( 1, 4 ), 56, Vector2( 1, 5 ), 152, Vector2( 2, 0 ), 447, Vector2( 2, 1 ), 506, Vector2( 2, 2 ), 438, Vector2( 2, 3 ), 182, Vector2( 2, 4 ), 27, Vector2( 2, 5 ), 24, Vector2( 3, 0 ), 507, Vector2( 3, 1 ), 187, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 434, Vector2( 3, 4 ), 54, Vector2( 3, 5 ), 18, Vector2( 4, 0 ), 510, Vector2( 4, 1 ), 190, Vector2( 4, 2 ), 155, Vector2( 4, 3 ), 178, Vector2( 4, 4 ), 432, Vector2( 4, 5 ), 48, Vector2( 5, 0 ), 191, Vector2( 5, 1 ), 442, Vector2( 5, 2 ), 218, Vector2( 5, 3 ), 440, Vector2( 5, 4 ), 216, Vector2( 5, 5 ), 144, Vector2( 6, 0 ), 254, Vector2( 6, 1 ), 250, Vector2( 6, 2 ), 154, Vector2( 6, 3 ), 248, Vector2( 6, 4 ), 26, Vector2( 6, 5 ), 16, Vector2( 7, 0 ), 251, Vector2( 7, 1 ), 186, Vector2( 7, 2 ), 62, Vector2( 7, 3 ), 184, Vector2( 7, 4 ), 50, Vector2( 7, 5 ), 448 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/snow-expansion.png-803d8658d68e6e113f484137eea12d16.stex"

[sub_resource type="TileSet" id=2]
0/name = "snow-expansion.png 0"
0/texture = SubResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 256, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "snow-expansion.png 1"
1/texture = SubResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 256, 16, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "snow-expansion.png 2"
2/texture = SubResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 320, 16, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "snow-expansion.png 3"
3/texture = SubResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 320, 0, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "snow-expansion.png 4"
4/texture = SubResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 336, 16, 16, 16 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "snow-expansion.png 5"
5/texture = SubResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 336, 0, 16, 16 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0

[sub_resource type="TileSet" id=4]
0/name = "snow-expansion.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 128, 128, 96 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 511, Vector2( 0, 1 ), 446, Vector2( 0, 2 ), 219, Vector2( 0, 3 ), 59, Vector2( 0, 4 ), 146, Vector2( 0, 5 ), 176, Vector2( 1, 0 ), 255, Vector2( 1, 1 ), 443, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 1, 4 ), 56, Vector2( 1, 5 ), 152, Vector2( 2, 0 ), 447, Vector2( 2, 1 ), 506, Vector2( 2, 2 ), 438, Vector2( 2, 3 ), 434, Vector2( 2, 4 ), 27, Vector2( 2, 5 ), 24, Vector2( 3, 0 ), 510, Vector2( 3, 1 ), 187, Vector2( 3, 2 ), 504, Vector2( 3, 3 ), 182, Vector2( 3, 4 ), 54, Vector2( 3, 5 ), 18, Vector2( 4, 0 ), 507, Vector2( 4, 1 ), 190, Vector2( 4, 2 ), 155, Vector2( 4, 3 ), 434, Vector2( 4, 4 ), 432, Vector2( 4, 5 ), 48, Vector2( 5, 0 ), 191, Vector2( 5, 1 ), 442, Vector2( 5, 2 ), 218, Vector2( 5, 3 ), 440, Vector2( 5, 4 ), 216, Vector2( 5, 5 ), 144, Vector2( 6, 0 ), 254, Vector2( 6, 1 ), 250, Vector2( 6, 2 ), 154, Vector2( 6, 3 ), 248, Vector2( 6, 4 ), 26, Vector2( 6, 5 ), 16, Vector2( 7, 0 ), 251, Vector2( 7, 1 ), 186, Vector2( 7, 2 ), 62, Vector2( 7, 3 ), 248, Vector2( 7, 4 ), 50 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=5]
resource_local_to_scene = true
0/name = "snow-expansion.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 304, 64, 48, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=9]

[sub_resource type="TileSet" id=10]

[sub_resource type="TileSet" id=121]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="Nav" type="Navigation2D" parent="."]
script = ExtResource( 5 )

[node name="Grass" type="TileMap" parent="Nav"]
tile_set = SubResource( 1 )
cell_size = Vector2( 16, 16 )
cell_quadrant_size = 1
format = 1

[node name="Roads" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1

[node name="Environment" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 16, 16 )
cell_tile_origin = 2
format = 1

[node name="Water" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 16, 16 )
collision_use_kinematic = true
format = 1

[node name="Trees" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
cell_tile_origin = 2
compatibility_mode = true
centered_textures = true
collision_use_kinematic = true
format = 1

[node name="BlueCastle" type="TileMap" parent="."]
tile_set = SubResource( 9 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
compatibility_mode = true
centered_textures = true
collision_use_kinematic = true
format = 1

[node name="RedCastle" type="TileMap" parent="."]
tile_set = SubResource( 10 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
cell_tile_origin = 2
compatibility_mode = true
centered_textures = true
collision_use_kinematic = true
format = 1

[node name="Towers" type="TileMap" parent="."]
z_index = 1
tile_set = SubResource( 121 )
cell_size = Vector2( 16, 16 )
format = 1
script = ExtResource( 3 )

[node name="start_pos" type="Position2D" parent="."]

[node name="end_pos" type="Position2D" parent="."]
position = Vector2( 1280, 720 )

[node name="Button" type="Button" parent="."]
visible = false
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 649.0
margin_right = 125.0
margin_bottom = 708.0

[node name="Button3" type="Button" parent="."]
visible = false
margin_left = 170.0
margin_top = 628.0
margin_right = 683.0
margin_bottom = 716.0

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 6 )

[node name="GameLogic" type="Node" parent="."]

[node name="TurnQueue" type="Node" parent="GameLogic"]
script = ExtResource( 7 )

[node name="Player1" type="Node" parent="GameLogic/TurnQueue"]
script = ExtResource( 4 )

[node name="Gold" type="Label" parent="GameLogic/TurnQueue/Player1"]
margin_left = 1215.0
margin_top = 20.0
margin_right = 1254.0
margin_bottom = 34.0
rect_pivot_offset = Vector2( 15, 24 )
theme = ExtResource( 9 )

[node name="HP" type="Label" parent="GameLogic/TurnQueue/Player1"]
margin_left = 1215.0
margin_top = 38.0
margin_right = 1254.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 46, 107 )
theme = ExtResource( 9 )

[node name="UnitCount" type="Label" parent="GameLogic/TurnQueue/Player1"]
margin_left = 1215.0
margin_top = 56.0
margin_right = 1254.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 46, 89 )
theme = ExtResource( 9 )

[node name="PlayerLabel" type="Label" parent="GameLogic/TurnQueue/Player1"]
margin_left = 1189.0
margin_top = 101.0
margin_right = 1256.0
margin_bottom = 115.0
rect_pivot_offset = Vector2( -130, -10 )
theme = ExtResource( 9 )
text = "Red player"

[node name="Sprite" type="Sprite" parent="GameLogic/TurnQueue/Player1"]
position = Vector2( 1206, 27 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="GameLogic/TurnQueue/Player1"]
position = Vector2( 1206, 45 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="GameLogic/TurnQueue/Player1"]
position = Vector2( 1206, 63 )
texture = ExtResource( 11 )

[node name="Player2" type="Node" parent="GameLogic/TurnQueue"]
script = ExtResource( 4 )

[node name="Gold" type="Label" parent="GameLogic/TurnQueue/Player2"]
margin_left = 1216.0
margin_top = 118.0
margin_right = 1256.0
margin_bottom = 132.0
rect_pivot_offset = Vector2( -130, -10 )
theme = ExtResource( 9 )

[node name="HP" type="Label" parent="GameLogic/TurnQueue/Player2"]
margin_left = 1216.0
margin_top = 136.0
margin_right = 1255.0
margin_bottom = 150.0
rect_pivot_offset = Vector2( 46, 107 )
theme = ExtResource( 9 )

[node name="UnitCount" type="Label" parent="GameLogic/TurnQueue/Player2"]
margin_left = 1216.0
margin_top = 154.0
margin_right = 1255.0
margin_bottom = 168.0
rect_pivot_offset = Vector2( 46, 89 )
theme = ExtResource( 9 )

[node name="PlayerLabel" type="Label" parent="GameLogic/TurnQueue/Player2"]
margin_left = 1183.0
margin_top = 3.0
margin_right = 1255.0
margin_bottom = 17.0
rect_pivot_offset = Vector2( -130, -10 )
theme = ExtResource( 9 )
text = "Blue player"

[node name="Sprite" type="Sprite" parent="GameLogic/TurnQueue/Player2"]
position = Vector2( 1207, 126 )
texture = ExtResource( 8 )

[node name="Sprite2" type="Sprite" parent="GameLogic/TurnQueue/Player2"]
position = Vector2( 1207, 144 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="GameLogic/TurnQueue/Player2"]
position = Vector2( 1207, 161 )
texture = ExtResource( 12 )

[node name="EndTurnButton" type="Button" parent="GameLogic"]
margin_left = 1176.0
margin_top = 680.0
margin_right = 1268.0
margin_bottom = 708.0
text = "end turn"

[node name="BuyUnits" type="Button" parent="GameLogic"]
margin_left = 1177.0
margin_top = 632.0
margin_right = 1268.0
margin_bottom = 662.0
text = "buy unit"

[node name="SimulateButton" type="Button" parent="GameLogic"]
margin_left = 1108.0
margin_top = 595.0
margin_right = 1268.0
margin_bottom = 615.0
disabled = true
text = "simulate"

[connection signal="map_changed" from="Towers" to="Nav" method="_on_Towers_map_changed"]
[connection signal="pressed" from="Button" to="Nav" method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="Nav" method="_on_Button3_pressed"]
[connection signal="pressed" from="Button3" to="Towers" method="_on_Button3_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="PopupMenu" method="_on_PopupMenu_id_pressed"]
[connection signal="pressed" from="GameLogic/EndTurnButton" to="GameLogic/TurnQueue" method="_on_EndTurnButton_pressed"]
[connection signal="pressed" from="GameLogic/BuyUnits" to="Nav" method="_on_BuyUnits_pressed"]
[connection signal="pressed" from="GameLogic/SimulateButton" to="Nav" method="_on_SimulateButton_pressed"]
